Fixed issue where the header logo shifted sideways upon shrinking

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -193,10 +193,6 @@ nav a:hover {
     top: 6px;
 }
 
-.navbar-shrink .navbar-header a {
-    left: 28px;
-}
-
 .navbar a:focus {
     outline: 0;
 }
